# fastapi_template

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
src/: main.py
src/api/: __init__.py
src/api/v1/: __init__.py  template.py
src/core/: config.py
src/db/: session.py
src/db/migrations/: env.py
src/repositories/: template.py
src/schemas/: template.py
src/services/: template.py
tests/: test_app.py
